Alterei banner 2, backgrounds

--- a/index.html
+++ b/index.html
@@ -44,23 +44,41 @@
 
         </div>
 
-            <img src="eficiencia.png" class="eficiencia">
+        <div class="div_icon">
+            <figure>
+                <div class="figure">
+                    <img src="eficiencia.png" class="eficiencia">
+                </div>
+                <li class="li_f" >+ EFICIÊNCIA</li>
 
-            <img src="conforto.jpg" class="conforto">
+            </figure>
 
-            <img src="lucro.png" class="lucro">
+            <figure>
+                <div class="figure">
+                    <img src="conforto.jpg" class="conforto">
+                </div>
+                <li class="li_f">+ CONFORTO</li>
+            </figure>
 
+            <figure>
+                <div class="figure">
+                    <img src="lucro.png" class="lucro">
+                </div>
+                <li class="li_f" >+ LUCRO</li>
+            </figure>
+                
+            
+        </div>
+
+<!-- 
             <div class="container_icon">
 
                 <ul class="navbar_icon">
 
-                    <li style="border-bottom: 4px solid rgb(108, 214, 108);">+ EFICIÊNCIA</li>
-                    <li style="border-bottom: 4px solid rgb(108, 214, 108)">+ CONFORTO</li>
-                    <li style="border-bottom: 4px solid rgb(108, 214, 108)">+ LUCRO</li>
 
                 </ul>
 
-            </div>
+            </div> -->
 
     </div>
 
