Atualizando cadastro e criando login

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgroConsult</title>
 
+    <link rel="icon" href="LogoPreto.png">
+
     <link rel="stylesheet" href="estilos_index.css">
     
 </head>
@@ -20,11 +22,15 @@
 
             <ul class="navbar">
                     <li>Home</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>Produtos</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>Sobre nós</li>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <li>Nosso Sistema</li>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <li>Simulador Financeiro</li>&nbsp;&nbsp;&nbsp;&nbsp;
                     <span style="color: darkorange;">|</span>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>Cadastro</li>&nbsp;&nbsp;
-                    <li>Login</li>
+                    <li>
+                        <a href="cadastro.html" class="hover_cadastro">Cadastro</a>
+                    </li>&nbsp;&nbsp;
+                    <li>
+                        <a href="login.html" class="hover_login">Login</a>
+                    </li>
             </ul>
 
         </div>
@@ -87,11 +93,9 @@
 
     </div>
 
-    <div class="banner4">
-
+    <div class="futher">
+        
     </div>
-
-
 </body>
 </html>
 
