--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgroConsult</title>
 
-    <link rel="icon" href="LogoPreto.png">
+    <link rel="icon" href="LogoBranco.png">
 
     <link rel="stylesheet" href="estilos_index.css">
     
@@ -94,7 +94,21 @@
     </div>
 
     <div class="futher">
-        
+        <div class="container">
+
+            <img src="LogoBranco.png" class="logo2">
+
+            <h1 class="titulofuther">AgroConsult</h1>
+
+            <h3 class="titulofuther1_1">Nossa Empresa</h3>
+
+            <ul class="navbar2">
+                <li>Sobre Nós</li>&nbsp;&nbsp;&nbsp;&nbsp;
+                <li>Missão</li>&nbsp;&nbsp;&nbsp;&nbsp;
+                <li>Trabalhos Realizados</li>&nbsp;&nbsp;&nbsp;&nbsp;
+                <li>Suporte</li>&nbsp;&nbsp;
+        </ul>
+        </div>
     </div>
 </body>
 </html>
