Páginas de home, cadastro e login atualizadas com api e tela de eventos feita

--- a/img/index.html
+++ b/img/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Racer's Edge - Be Fast, Be TRE.</title>
 
-<<<<<<< HEAD
+
     <link rel="icon" href="volantebranco2.png">
-=======
-    <link rel="icon" href="LogoBranco.png">
->>>>>>> 7324b9f0c2587b37634388114c366e7bb74b34d8
+
 
     <link rel="stylesheet" href="estilos_index.css">
     
@@ -22,11 +20,10 @@
 
             <img src="tre.png" class="logo">
 
-            <h1 class="titulo">                                                  </h1>
+            <h1 class="titulo"></h1>
 
             <ul class="navbar">
                     <li>Home</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>Eventos</li>&nbsp;&nbsp;&nbsp;&nbsp;
                     <li>Performance</li>&nbsp;&nbsp;&nbsp;&nbsp;
                     <li>Custom</li>&nbsp;&nbsp;&nbsp;&nbsp;
                     <span style="color: red;">|</span>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -44,7 +41,7 @@
     <div class="banner">
         <div class="bannerdobanner">
 
-            <h3 class="mensagem">The Racer's <span style="color: red;">Edge</span>, um <u style="text-decoration-color: red;">estilo de vida</u>.</h3>
+            <h3 class="mensagem">THE RACER'S <span style="color: red;"> EDGE</span>, UM ESTILO DE <span style="color: red;">VIDA</span>.</h3>
             
         </div>
 
@@ -69,34 +66,21 @@
 
     <div class="banner3">
 
-            <img src="Milharal.jpg" class="milharal">
+            <img src="racha.jpeg" class="milharal">
 
             <div class="container3">
-                <h3 class="titulo3">Nosso ponto forte são os resultados!</h3>
+                <h3 class="titulo3">Apenas diversão e emoção!</h3>
             </div>
 
             <h1 class="texto3">
-                São mais de <span style="background-color: rgb(108, 214, 108);">5.000</span> plantações espalhadas por todo o Brasil com o nosso sistema de monitoramento, melhorando e <b style="background-color: darkorange;">aumentando o lucro</b> do produtor e reduzindo sua perda na plantação. Com nosso controle, a sua plantação se torna muito mais <b style="background-color: darkorange;">eficiente</b> e <b style="background-color: rgb(255, 140, 0);">produtiva</b>.
+                Essa é o ambiente que queremos criar, um ambiente de união entre amigos e carros. Queremos apenas diversão e risadas quando nos encontramos. Nosso principal objetivo é alcançar aqueles que são apaixonados pelo que vivem e da forma que aproveitam.
             </h1>
 
     </div>
 
     <div class="futher">
-        <div class="container">
-
-            <img src="LogoBranco.png" class="logo2">
-
-            <h1 class="titulofuther">AgroConsult</h1>
-
-            <h3 class="titulofuther1_1">Nossa Empresa</h3>
-
-            <ul class="navbar2">
-                <li>Sobre Nós</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                <li>Missão</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                <li>Trabalhos Realizados</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                <li>Suporte</li>&nbsp;&nbsp;
-        </ul>
-        </div>
+        <img class="logo_futher" src="volante branco.png">
+        <h5 class="copyright">© 2022 The Racer's Edge. Todos os direitos reservados. Grupo HOS Ltda</h5>
     </div>
 </body>
 </html>
