--- a/img/eventos.html
+++ b/img/eventos.html
@@ -17,27 +17,12 @@
     
     <div class="header">
         <div class="container">
-
-            <img src="tre.png" class="logo">
-
-            <h1 class="titulo"></h1>
-
-            <ul class="navbar">
-                    <li>
-                        <a href="index.html" class="hover_index">Home</a>
-                    </li>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>Eventos</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>Performance</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>Custom</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span style="color: red;">|</span>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>
-                        <a href="cadastro.html" class="hover_cadastro">Cadastro</a>
-                    </li>&nbsp;&nbsp;
-                    <li>
-                        <a href="login.html" class="hover_login">Login</a>
-                    </li>
-            </ul>
-
+            <img src="volante branco.png" class="logo">&nbsp;&nbsp;&nbsp;&nbsp;
+            <span style="color: red;">|</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            <h1 class="titulo_cadastro">Perfil</h1>
+            <h3>
+                <a href="index.html" class="sair">Sair</a>
+            </h3>
         </div>
     </div>
 
