Criação página Custom

--- a/img/eventos.html
+++ b/img/eventos.html
@@ -54,10 +54,6 @@
                 </h3>
             </div>
 
-            <div class="div_btn">
-                <button onclick="votar()" class="btn">VOTAR NESSE</button>
-            </div>
-
         </div>
 
         <div class="caixa_votacao">
@@ -71,10 +67,6 @@
                     Preparação: Stage 2 - Remap, Downpipe e Escape<br>
                     Suspensão: Bilstein B14
                 </h3>
-            </div>
-
-            <div class="div_btn">
-                <button onclick="votar()" class="btn">VOTAR NESSE</button>
             </div>
 
         </div>
@@ -92,10 +84,6 @@
                 </h3>
             </div>
 
-            <div class="div_btn">
-                <button onclick="votar()" class="btn">VOTAR NESSE</button>
-            </div>
-
         </div>
 
         <div class="caixa_votacao">
@@ -103,16 +91,12 @@
             <img src="rs3.jpg" class="cxcarro1">
 
             <div class="texto_carro">
-                <h3 class="tiago_romano"><span style="background-color: red;">Nissan 350Z</span> - Tiago Romano <br><br>
+                <h3 class="tiago_romano"><span style="background-color: red;">Audi RS3</span> - Lucas Rhoeder <br><br>
                     Motor: 2.5L Turbo<br>
                     Rodas: OZ Racing Ultrallegera<br>
                     Preparação: Stage 3 - Turbina GT550, Remap, Downpipe e Escape<br>
                     Suspensão: Bilstein B16
                 </h3>
-            </div>
-
-            <div class="div_btn">
-                <button onclick="votar()" class="btn">VOTAR NESSE</button>
             </div>
 
         </div>
@@ -121,18 +105,19 @@
             <img src="silvia2.jpg" class="cxcarro1">
 
             <div class="texto_carro">
-                <h3 class="tiago_romano"><span style="background-color: red;">Nissan 350Z</span> - Tiago Romano <br><br>
+                <h3 class="tiago_romano"><span style="background-color: red;">Nissan Silvia S14</span> - Carlos Gadot <br><br>
                     Motor: 2.5L 6cc Turbo<br>
                     Rodas: Volks Racing RT67<br>
                     Preparação: Stage 3 - Turbina IHI T70, FT Injection e Escape<br>
                     Suspensão: KS Suspension
                 </h3>
             </div>
-
-            <div class="div_btn">
-                <button onclick="votar()" class="btn">VOTAR NESSE</button>
-            </div>
         </div>
+
+        <div class="div_btn">
+            <button onclick="votar()" class="btn">VOTAR NESSE</button>
+        </div>
+        
     </div>
 
     <div class="banner3">
