--- a/img/index.html
+++ b/img/index.html
@@ -23,9 +23,10 @@
             <h1 class="titulo"></h1>
 
             <ul class="navbar">
-                    <li>Home</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>Performance</li>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>Custom</li>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <li>Home</li>&nbsp;&nbsp;
+                    <li>
+                        <a href="custom.html" class="hover_custom">Custom</a>
+                    </li>&nbsp;&nbsp;&nbsp;&nbsp;
                     <span style="color: red;">|</span>&nbsp;&nbsp;&nbsp;&nbsp;
                     <li>
                         <a href="cadastro.html" class="hover_cadastro">Cadastro</a>
