Criando funções eventos

--- a/img/custom.html
+++ b/img/custom.html
@@ -41,7 +41,7 @@
 
     <div class="banner">
         <div class="div_title_votação">
-            <h3 class="title_votacao">NOSSO PROJETO</h3>
+            <h3 class="title_votacao">CUSTOM</h3>
         </div>
         <div class="caixa_votacao">
         
